# Text-Classification

./: .gitignore  pyproject.toml
keras_classification/: classify.py
